# paramtree

./: .travis.yml  ParamTree.hs  README.md  cabal.haskell-ci  paramtree.cabal
.github/workflows/: haskell-ci.yml
tests/: Test.hs  paramtree.golden
