Name:               paramtree
Version:            0.1.1.1

Homepage:           https://github.com/merijn/paramtree
Bug-Reports:        https://github.com/merijn/paramtree/issues

Author:             Merijn Verstraaten
Maintainer:         Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:          Copyright © 2017-2023 Merijn Verstraaten

License:            BSD3
License-File:       LICENSE

Category:           Development, Benchmarking, Testing
Cabal-Version:      >= 1.10
Build-Type:         Simple
Tested-With:        GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5,
                    GHC == 8.8.4, GHC == 8.10.7, GHC == 9.0.2, GHC == 9.2.8,
                    GHC == 9.4.8, GHC == 9.6.6, GHC == 9.8.4, GHC == 9.10.1,
                    GHC == 9.12.1

Extra-Source-Files: README.md tests/*.golden

Synopsis:           Generate labelled test/benchmark trees from sets of parameters

Description:
    Easily generate a labelled tree of tests/benchmarks from a generation
    function and sets of parameters to use for each of that functions
    arguments. Example usecases include criterion benchmark trees or tasty test
    trees.

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall -fno-warn-unused-do-bind

  Exposed-Modules:      ParamTree
  Other-Extensions:     CPP
                        DataKinds
                        GADTs
                        KindSignatures
                        ScopedTypeVariables
                        TypeFamilies
                        TypeOperators

  Build-Depends:        base >= 4.9 && < 5
               ,        containers >= 0.4 && < 0.9

Test-Suite test
  Default-Language:     Haskell2010
  Type:                 exitcode-stdio-1.0
  Main-Is:              Test.hs
  Hs-Source-Dirs:       tests
  GHC-Options:          -Wall -fno-warn-unused-do-bind
  Other-Extensions:     CPP
                        DataKinds
  Build-Depends:        base
               ,        paramtree
               ,        bytestring >= 0.10 && < 0.13
               ,        tasty >= 0.11 && < 1.6
               ,        tasty-golden >= 2.0 && < 2.4
               ,        tasty-hunit >= 0.9 && < 0.11
               ,        temporary >= 1.2 && < 1.4

Source-Repository head
  Type:     git
  Location: ssh://github.com:merijn/paramtree.git
